// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servie-errorhandler should fail "gracefully" with non-error 1`] = `
Object {
  "body": Object {
    "bodyUsed": false,
    "buffered": true,
    "hasBody": true,
    "headers": Object {
      "content-length": "269",
      "content-type": "text/plain",
    },
  },
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "content-type": "text/html",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "statusCode": 500,
  "statusMessage": undefined,
}
`;

exports[`servie-errorhandler should render an error 1`] = `
Object {
  "body": Object {
    "bodyUsed": false,
    "buffered": true,
    "hasBody": true,
    "headers": Object {
      "content-length": "269",
      "content-type": "text/plain",
    },
  },
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "content-type": "text/html",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "statusCode": 500,
  "statusMessage": undefined,
}
`;

exports[`servie-errorhandler should render boom status errors 1`] = `
Object {
  "body": Object {
    "bodyUsed": false,
    "buffered": true,
    "hasBody": true,
    "headers": Object {
      "content-length": "271",
      "content-type": "text/plain",
    },
  },
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "content-type": "text/html",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "statusCode": 400,
  "statusMessage": undefined,
}
`;

exports[`servie-errorhandler should render http errors status error 1`] = `
Object {
  "body": Object {
    "bodyUsed": false,
    "buffered": true,
    "hasBody": true,
    "headers": Object {
      "content-length": "271",
      "content-type": "text/plain",
    },
  },
  "bytesTransferred": 0,
  "finished": false,
  "headers": Object {
    "content-security-policy": "default-src 'self'",
    "content-type": "text/html",
    "x-content-type-options": "nosniff",
  },
  "started": false,
  "statusCode": 400,
  "statusMessage": undefined,
}
`;
